# football_base

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
football_base/: alembic.ini  config.py  db.py  di.py  main.py  request_models.py  response_models.py  utils.py
football_base/docker/: dev-entrypoint.sh
football_base/football/: use_cases.py
football_base/football/adapters/: orm.py  repository.py
football_base/football/domain/: entities.py  readers.py
football_base/football/service_layer/: unit_of_work.py
